kubernetes/printer/ustreamer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &appName ustreamer
  namespace: printer
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: *appName
  template:
    metadata:
      labels:
        app: *appName
    spec:
      securityContext:
        supplementalGroups:
          - 26 # tape group for video
      containers:
        - name: *appName
          image: mkuf/ustreamer:v6.56
          args:
            - --device=/dev/v4l/by-id/usb-4K_USB_CAMERA_HD_USB_CAMERA_01.00.00-video-index0
            - -r 3840x2160
            - --desired-fps=30
            - --format=mjpeg
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            readOnlyRootFilesystem: true
            privileged: true
          ports:
            - containerPort: &httpPort 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /dev/v4l
              name: video-devices
          livenessProbe:
            httpGet:
              path: /
              port: *httpPort
          readinessProbe:
            httpGet:
              path: /
              port: *httpPort
          startupProbe:
            httpGet:
              path: /
              port: *httpPort
            failureThreshold: 30
            periodSeconds: 10
      volumes:
        - name: video-devices
          hostPath: 
            path: /dev/v4l
            type: Directory
