kubernetes/printer/ustreamer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &appName ustreamer
  namespace: printer
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: &host printer.saturn.ci
      http:
        paths:
        - pathType: Exact
          path: "/stream"
          backend:
            service:
              name: *appName
              port:
                name: http
        - pathType: Exact
          path: "/snapshot"
          backend:
            service:
              name: *appName
              port: 
                name: http
  tls:
    - secretName: *host
      hosts:
        - *host
